feat: add sorting to flight search
